--- a/src/public/css/adminCreateProduct.css
+++ b/src/public/css/adminCreateProduct.css
@@ -76,3 +76,14 @@
     border: 1px solid white ;
   }
 }
+
+@media screen and (max-width: 700px) {
+  .admin-create-product-container {
+    form {
+      width: 100% !important;
+    }
+    .form-title, .submit-button {
+      width: 100% !important;
+    }
+  }
+}
