--- a/src/resource/views/users/product.hbs
+++ b/src/resource/views/users/product.hbs
@@ -10,7 +10,7 @@
       </div> --}}
 
       <div class="image">
-        <img src="{{product.img}}" />
+        <img src="{{product.img.path}}" />
       </div>
     </div>
     
@@ -152,7 +152,7 @@
         slug: `{{product.slug}}`,
         name: `{{product.name}}`,
         price: `{{product.price}}`,
-        image: `{{product.img}}`,
+        image: `{{product.img.path}}`,
         quantity: getQuantityValue.innerText
       };
 
@@ -194,7 +194,7 @@
         slug: `{{product.slug}}`,
         name: `{{product.name}}`,
         price: `{{product.price}}`,
-        image: `{{product.img}}`,
+        image: `{{product.img.path}}`,
         quantity: getQuantityValue.innerText
       };
 
