--- a/src/resource/views/users/introduce.hbs
+++ b/src/resource/views/users/introduce.hbs
@@ -1,8 +1,8 @@
 <div class="introduce-container">
-    <h2><image src="../../../img/full_logo.jpg"/></h2>
+    <h2><image src="https://res.cloudinary.com/bunny-store/image/upload/v1711070724/web-img/full_logo_o0r2c7.jpg"/></h2>
     
     <div>
-      <image src="../../../img/logo.jpg"/>
+      <image src="https://res.cloudinary.com/bunny-store/image/upload/v1711070727/web-img/logo_xkavlj.webp"/>
       <span>
         <br>BunnyStore là cửa hàng mỹ phẩm của mình, một người yêu thích làm đẹp và luôn mong muốn mang đến cho các bạn những sản phẩm chất lượng, an toàn và hiệu quả nhất.
         <br>Tại BunnyStore, các bạn có thể tìm thấy đa dạng các thương hiệu mỹ phẩm nổi tiếng từ Hàn Quốc, Nhật Bản, Mỹ, châu Âu,... cho đến các thương hiệu nội địa uy tín. Tất cả sản phẩm đều là hàng chính hãng hết nha.
@@ -19,13 +19,13 @@
           <li> Được tư vấn miễn phí.</li> 
           <li> Cập nhật những xu hướng làm đẹp mới nhất.</li> 
       </span>
-      <image src="../../../img/logo.jpg"/>
+      <image src="https://res.cloudinary.com/bunny-store/image/upload/v1711070727/web-img/logo_xkavlj.webp"/>
     </div>
     
     <hr>
 
     <div>
-      <image src="../../../img/logo.jpg"/>
+      <image src="https://res.cloudinary.com/bunny-store/image/upload/v1711070727/web-img/logo_xkavlj.webp"/>
       <span>
         <ul>Hãy liên hệ với mình qua:</ul>
           <li> Website:</li>
