--- a/src/resource/views/users/signIn.hbs
+++ b/src/resource/views/users/signIn.hbs
@@ -1,6 +1,6 @@
 <div class="sign-in-container">
   <div class="sign-in-form">
-    <img src="../../img/4.jpg">
+    <img src="https://res.cloudinary.com/bunny-store/image/upload/v1711070715/web-img/4_lnwzuk.jpg">
     <div class="form-input">
       <p class="form-title">Đăng nhập</p>
       <form id="form-3" method="post" action="/authentication/checking-account">
