--- a/src/public/css/adminAllProducts.css
+++ b/src/public/css/adminAllProducts.css
@@ -1,22 +1,4 @@
 .admin-all-products-container {
-  overflow-x: auto;
-
-  .total {
-    border: 1px solid black;
-    max-width: 200px;
-    height: fit-content;
-    padding: 5px;
-
-    .total-title, .total-number {
-      max-width: 200px;
-      font-weight: bolder;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      margin-block-start: 5px;
-      margin-block-end: 5px;
-    }
-  }
 
   .filter {
     background-color: #FFDFDF;
@@ -39,6 +21,11 @@
     }
   }
 
+  .table {
+    overflow-x: auto;
+    padding: 10px 0;
+  }
+
   table, td {
     text-align: center;
   }
@@ -46,7 +33,9 @@
   table {
     width: 100%;
     border-spacing: 0px 10px;
-    padding: 0px 10px;
+    padding: 0px 5px;
+    background-color: #F0F0F0;
+    border-radius: 10px;
   }
 
   thead {
@@ -54,21 +43,47 @@
     height: 50px;
     a { text-decoration: none }
     i { color: black }
+
+    td:first-child {
+      border-top-left-radius: 10px;
+      border-bottom-left-radius: 10px;
+
+    }
+    td:last-child {
+      border-top-right-radius: 10px;
+      border-bottom-right-radius: 10px;
+    }
   }
 
   tbody {
     tr {
-      background-color:#F0F0F0;
+      background-color: white;
       height: 50px;
   
       td:first-child {
         border-top-left-radius: 10px;
         border-bottom-left-radius: 10px;
       }
+
+      td:nth-child(3) {
+        text-align: left;
+        gap: 5px;
+
+        p {
+          overflow: hidden;
+          display: -webkit-box;
+          -webkit-line-clamp: 2; /* number of lines to show */
+                  /* line-clamp: 2;  */
+          -webkit-box-orient: vertical;
+        }
+      }
+
       td:last-child {
         border-top-right-radius: 10px;
         border-bottom-right-radius: 10px;
       }
+
+      a { text-decoration: none; color: black; font-weight: bold; }
     }
   
     tr:hover {
@@ -166,12 +181,27 @@
       width: 20px;
       color: black;
     }
-  }  
+  }    
+}
 
-  /* Change styles for cancel button and delete button on extra small screens */
-  @media screen and (max-width: 300px) {
-    .cancelbtn, .deletebtn {
-      width: 100%;
+@media screen and (max-width: 700px) {
+  .admin-all-products-container { 
+    .board-title {
+      p { font-size: 25px;}
     }
-  }
+
+    tbody, thead {
+      td:nth-child(1) { display: none;}
+      td:nth-child(2) {
+        border-top-left-radius: 10px;
+        border-bottom-left-radius: 10px;
+      }
+      td:nth-child(4) { display: none;}
+      td:nth-child(5) { display: none;}
+    }
+
+    .modal-content {
+      width: 80% !important;
+    }
+  } 
 }
