--- a/src/public/css/adminHome.css
+++ b/src/public/css/adminHome.css
@@ -1,11 +1,9 @@
 .admin-home-container {
   h1 {
-    display: flex;
-    align-items: center;
-    justify-content: center;
     text-transform: capitalize;
     margin-block-start: 0;
     margin-block-end: 0;
+    text-align: center;
   }
 
   .info-table {
@@ -24,11 +22,15 @@
       background-color:#D1A6A6;
       height: 50px;
       font-weight: bolder;
+
+      td {
+        border-radius: 5px;
+      }
     }
   
     tbody {
       tr {
-        background-color:#F0F0F0;
+        /* background-color:#F0F0F0; */
         height: 50px;
 
         td {
@@ -38,8 +40,11 @@
         }
     
         td:first-child {
-          border-top-left-radius: 10px;
-          border-bottom-left-radius: 10px;
+          /* border-top-left-radius: 10px;
+          border-bottom-left-radius: 10px; */
+          border: 1px solid black;
+          border-radius: 10px;
+
         }
         td:last-child {
           border-top-right-radius: 10px;
