--- a/src/public/css/adminUpdateProduct.css
+++ b/src/public/css/adminUpdateProduct.css
@@ -34,6 +34,7 @@
       width: 100%;
       min-height: 30px;
       border-radius: 5px;
+      text-indent: 10px;
       border-style: none;
     };
 
@@ -73,5 +74,16 @@
     background-color: #D1A6A6;
     color: white;
     border: 1px solid white ;
+  }
+}
+
+@media screen and (max-width: 700px) {
+  .admin-update-product-container {
+    form {
+      width: 100% !important;
+    }
+    .form-title, .submit-button {
+      width: 100% !important;
+    }
   }
 }
