--- a/src/public/css/userAllOrders.css
+++ b/src/public/css/userAllOrders.css
@@ -43,8 +43,11 @@
         td {
           height: 100px;
           border-bottom: 1px solid black;
-          padding: 5px 0;
-          white-space: nowrap;
+          padding: 5px;
+        }
+
+        td:nth-child(2) {
+          text-align: start;
         }
 
         .delete-button {
@@ -54,13 +57,14 @@
 
       img {
         /* border-radius: 50%; */
-        width: 100px;
+        width: 75px;
         aspect-ratio: 1/1;
       }
 
       a { 
         text-decoration: none; 
         color: black;
+        padding-left: 0 !important;
       }
     }
   }
@@ -202,6 +206,16 @@
 }
 
 @media screen and (max-width: 700px) {
+  table {
+    a {
+      overflow: hidden;
+      display: -webkit-box;
+      -webkit-line-clamp: 2; /* number of lines to show */
+              /* line-clamp: 2;  */
+      -webkit-box-orient: vertical;
+    }
+  }
+
   table tr td:nth-child(2) {
     width: 20% !important;
   }
