--- a/src/resource/views/admin/create.hbs
+++ b/src/resource/views/admin/create.hbs
@@ -106,7 +106,7 @@
     </div>
 
     <div class="form-group">
-      <select name="hotsale">
+      <select name="status">
         <option value="no">-- Tình Trạng Sản Phẩm --</option>
         <option value="no">Bình thường</option>
         <option value="flash-sale">Đang Flash Sale</option>
