--- a/src/resource/views/users/signUp.hbs
+++ b/src/resource/views/users/signUp.hbs
@@ -1,6 +1,6 @@
 <div class="sign-up-container">
   <div class="sign-up-form">
-    <img src="../../img/4.jpg">
+    <img src="https://res.cloudinary.com/bunny-store/image/upload/v1711070715/web-img/4_lnwzuk.jpg">
     <div class="form-input">
       <p class="form-title">Đăng ký</p>
       <form id="form-2" method="post" action="/authentication/creating-account">
@@ -24,6 +24,11 @@
           <span class="form-message"></span>
         </div>
 
+        <div class="form-group">
+          <p class="wrong-info">
+          </p> 
+        </div>
+
         <div class="form-action">
           <button title="submit" type="submit">Đăng Ký</button>
         </div>
@@ -38,7 +43,12 @@
   
 </div>
 
-<script>  
+<script>
+var wrongInfo = document.querySelector('p.wrong-info')
+if (`{{error}}`) {
+  wrongInfo.innerText = `{{error}}`
+  wrongInfo.style.color = 'red'
+}
 
 // executing validate
 function validating(inputElement, rule, checkValidate, index) {
