--- a/src/resource/views/users/introduce.hbs
+++ b/src/resource/views/users/introduce.hbs
@@ -1,13 +1,11 @@
 <div class="introduce-container">
-    <h2><image src="https://res.cloudinary.com/bunny-store/image/upload/v1711070724/web-img/full_logo_o0r2c7.jpg"/></h2>
+    <image src="https://res.cloudinary.com/bunny-store/image/upload/v1711070724/web-img/full_logo_o0r2c7.jpg"/>
     
     <div>
       <image src="https://res.cloudinary.com/bunny-store/image/upload/v1711070727/web-img/logo_xkavlj.webp"/>
-      <span>
-        <br>BunnyStore là cửa hàng mỹ phẩm của mình, một người yêu thích làm đẹp và luôn mong muốn mang đến cho các bạn những sản phẩm chất lượng, an toàn và hiệu quả nhất.
-        <br>Tại BunnyStore, các bạn có thể tìm thấy đa dạng các thương hiệu mỹ phẩm nổi tiếng từ Hàn Quốc, Nhật Bản, Mỹ, châu Âu,... cho đến các thương hiệu nội địa uy tín. Tất cả sản phẩm đều là hàng chính hãng hết nha.
-        <br>Với kiến thức của mình về sản phẩm, mình hy vọng sẽ giúp các bạn lựa chọn được những sản phẩm phù hợp nhất với nhu cầu và loại da của bạn.
-      </span>
+      <br>BunnyStore là cửa hàng mỹ phẩm của mình, một người yêu thích làm đẹp và luôn mong muốn mang đến cho các bạn những sản phẩm chất lượng, an toàn và hiệu quả nhất.
+      <br>Tại BunnyStore, các bạn có thể tìm thấy đa dạng các thương hiệu mỹ phẩm nổi tiếng từ Hàn Quốc, Nhật Bản, Mỹ, châu Âu,... cho đến các thương hiệu nội địa uy tín. Tất cả sản phẩm đều là hàng chính hãng hết nha.
+      <br>Với kiến thức của mình về sản phẩm, mình hy vọng sẽ giúp các bạn lựa chọn được những sản phẩm phù hợp nhất với nhu cầu và loại da của bạn.
     </div>
 
     <hr>
