--- a/src/resource/views/admin/updateProfile.hbs
+++ b/src/resource/views/admin/updateProfile.hbs
@@ -4,7 +4,7 @@
   </div>
 
   <div class="avatar">
-    <img src="../../../img/logo.jpg" alt="">
+    <img src="https://res.cloudinary.com/bunny-store/image/upload/v1711070727/web-img/logo_xkavlj.webp" alt="">
   </div>
 
   <form class="admin-update-form" method="POST" action="/admin/profile-updated/{{user._id}}?_method=PUT">
