--- a/src/resource/views/users/product.hbs
+++ b/src/resource/views/users/product.hbs
@@ -10,19 +10,19 @@
       </div> --}}
 
       <div class="image">
-        <img src="{{product.img.path}}" />
+        <img src="{{newProduct.img.path}}" />
       </div>
     </div>
     
     <div class="details-box">
       <div class="title">
-        <h3>{{product.brand}}</h3>
-        <h1>{{product.name}}</h1>
-        <h3>{{product.price}}đ</h3>
+        <h3>{{newProduct.brand}}</h3>
+        <h1>{{newProduct.name}}</h1>
+        <h3>{{newProduct.price}}đ</h3>
       </div>
       
       <div class="description">
-        <p>{{product.description}}</p>
+        <p>{{newProduct.description}}</p>
       </div>
 
       <div class="quantity">
@@ -50,11 +50,27 @@
 
   <div class="more-details">
     <h3>Thông tin sản phẩm</h3>
-    <p>{{product.details}}</p>
+    <p>{{newProduct.details}}</p>
+  </div>
+
+  <div class="related-products">
+    <div class="title">
+      <a href="/all-products/{{newProduct.categories}}/{{newProductType}}" class="main-title"><b>Sản phẩm tương tự</b></a>
+    </div>
+
+    <div class="products">
+      {{#each relatedProducts}}
+      <a href="/product/{{this.slug}}">
+        <div class="product">
+          <img src="{{this.img.path}}" alt="" id="product-1">
+          <p id="product-price">{{this.price}}đ</p>
+          <p id="product-details">{{this.name}}</p>
+        </div>
+      </a>
+      {{/each}}
+    </div>
   </div>
 </div>
-
-
 
 <script>
   var getAddToCart = document.querySelector('div.add-to-cart')
@@ -71,7 +87,7 @@
   getQuantityDiv.style.visibility = 'hidden'
 
   // display out-of-order if true
-  if (`{{product.status}}` === 'out-of-order') {
+  if (`{{newProduct.status}}` === 'out-of-order') {
     getAddToCart.style.display = 'none'
     getBuyNow.style.display = 'none'
     getOutOfOrder.style.display = 'flex'
@@ -92,7 +108,7 @@
   // check if the item has already been added, return the button type to added
   var listProductLength = myObj.productInfo.length
   for (let i = 0; i < listProductLength; ++i) {
-    if (myObj.productInfo[i].slug === `{{product.slug}}`) {
+    if (myObj.productInfo[i].slug === `{{newProduct.slug}}`) {
       // change button color to 'added button'
       getAddToCart.style.backgroundColor = '#D1A6A6'
       addToCartText.style.color = 'white'
@@ -110,7 +126,7 @@
     getQuantityValue.innerText++
     listProductLength = myObj.productInfo.length
     for (let i = 0; i < listProductLength; ++i) {
-      if (myObj.productInfo[i].slug === `{{product.slug}}`) {
+      if (myObj.productInfo[i].slug === `{{newProduct.slug}}`) {
         // store the quantity on page to localStorage
         myObj.productInfo[i].quantity = getQuantityValue.innerText
         localStorage.setItem('product_cart_count', JSON.stringify(myObj));
@@ -121,7 +137,7 @@
   // decrease quantity onclick and min = 1
   getDecreaseQuantity.onclick = function () {
     for (let i = 0; i < listProductLength; ++i) {
-      if (myObj.productInfo[i].slug === `{{product.slug}}`) {
+      if (myObj.productInfo[i].slug === `{{newProduct.slug}}`) {
         if (getQuantityValue.innerText === '1') {
           getQuantityValue.innerText = 1
           myObj.productInfo[i].quantity = 1
@@ -149,10 +165,10 @@
       
       // create new added product 
       var newProductInfo = {
-        slug: `{{product.slug}}`,
-        name: `{{product.name}}`,
-        price: `{{product.price}}`,
-        image: `{{product.img.path}}`,
+        slug: `{{newProduct.slug}}`,
+        name: `{{newProduct.name}}`,
+        price: `{{newProduct.price}}`,
+        image: `{{newProduct.img.path}}`,
         quantity: getQuantityValue.innerText
       };
 
@@ -172,7 +188,7 @@
       // remove the product from the localStorage
       listProductLength = myObj.productInfo.length
       for (let i = 0; i < listProductLength; i++) {
-        if (myObj.productInfo[i].slug === `{{product.slug}}`) {
+        if (myObj.productInfo[i].slug === `{{newProduct.slug}}`) {
           myObj.productInfo.splice(i, 1)
           break
         }
@@ -191,10 +207,10 @@
       getQuantityDiv.style.visibility = 'visible'
 
       var newProductInfo = {
-        slug: `{{product.slug}}`,
-        name: `{{product.name}}`,
-        price: `{{product.price}}`,
-        image: `{{product.img.path}}`,
+        slug: `{{newProduct.slug}}`,
+        name: `{{newProduct.name}}`,
+        price: `{{newProduct.price}}`,
+        image: `{{newProduct.img.path}}`,
         quantity: getQuantityValue.innerText
       };
 
