--- a/src/resource/views/partials/userHeader.hbs
+++ b/src/resource/views/partials/userHeader.hbs
@@ -17,10 +17,12 @@
 
     <ul>
       <li>
-        <a href="/all-products/skincare">
-          Skincare
+        <span>
+          <a href="/all-products/skincare">
+            Skincare
+          </a>
           <i class="fi fi-rr-angle-small-right" style="padding-top: 5px;"></i>
-        </a>
+        </span>
         <ul>
             <li>
               <a href="/all-products/skincare/xit-khoang">
@@ -101,10 +103,12 @@
         </ul>
       </li>
       <li>
-        <a href="/all-products/makeup">
-          Makeup
+        <span>
+          <a href="/all-products/makeup">
+            Makeup
+          </a>
           <i class="fi fi-rr-angle-small-right" style="padding-top: 5px;"></i>
-        </a>
+        </span>
         <ul>
           <li>
             <a href="/all-products/makeup/phan-ma">
