--- a/src/resource/views/users/allProducts.hbs
+++ b/src/resource/views/users/allProducts.hbs
@@ -113,37 +113,37 @@
           <li>
             <a href="/all-products/makeup/phan-ma">
               Phấn má
-              <img src="https://res-console.cloudinary.com/bunny-store/thumbnails/v1/image/upload/v1710647688/cHJvZHVjdHMvaWM5b29ka2tzZ3F1aW1vYndrM3U=/preview" alt="">
+              <img src="https://res.cloudinary.com/bunny-store/image/upload/v1711080154/web-img/o1th0fymd3gzjzgwbrbz_ghkt70.jpg" alt="">
             </a>
           </li>
           <li>
             <a href="/all-products/makeup/mascara">
               Mascara
-              <img src="https://res-console.cloudinary.com/bunny-store/thumbnails/v1/image/upload/v1710647373/cHJvZHVjdHMvbHdnZmVjYWpzMHNxdnBrYWxwaXA=/preview" alt="">
+              <img src="https://res.cloudinary.com/bunny-store/image/upload/v1711080143/web-img/ejschlqugyhr4asayspm_hbrdiy.jpg" alt="">
             </a>
           </li>
           <li>
             <a href="/all-products/makeup/ke-mat">
               Kẻ mắt
-              <img src="https://res-console.cloudinary.com/bunny-store/thumbnails/v1/image/upload/v1710647427/cHJvZHVjdHMvZ2d4M3dleDQ1em96YTFyd2xuczM=/preview" alt="">
+              <img src="https://res.cloudinary.com/bunny-store/image/upload/v1711080172/web-img/djy7wut0chooynp65hov_xxbwxi.jpg" alt="">
             </a>
           </li>
           <li>
             <a href="/all-products/makeup/kem-chong-nang">
               Kem chống nắng
-              <img src="https://res-console.cloudinary.com/bunny-store/thumbnails/v1/image/upload/v1710648070/cHJvZHVjdHMvZGVyNmRsNG1jNjYwdnZ6dXFmdm8=/preview" alt="">
+              <img src="https://res.cloudinary.com/bunny-store/image/upload/v1711080150/web-img/hspzixrzay9whcg51meo_h4iotk.jpg" alt="">
             </a>
           </li>
           <li>
             <a href="/all-products/makeup/che-khuyet-diem">
               Che khuyết điểm
-              <img src="https://res-console.cloudinary.com/bunny-store/thumbnails/v1/image/upload/v1710648154/cHJvZHVjdHMvZm13a3RoZGJ5cnpzZHpjdGluZDQ=/preview" alt="">
+              <img src="https://res.cloudinary.com/bunny-store/image/upload/v1711080188/web-img/vr3yzblr5g0crzkgj9po_e8mrjp.jpg" alt="">
             </a>
           </li>
           <li>
             <a href="/all-products/makeup/son">
               Son
-              <img src="https://res-console.cloudinary.com/bunny-store/thumbnails/v1/image/upload/v1710647180/cHJvZHVjdHMvc2Z5YWVqdWVtaHl4YWRweHJqOWs=/preview" alt="">
+              <img src="https://res.cloudinary.com/bunny-store/image/upload/v1711080146/web-img/jd2llxirfbwpdwekk7lz_cpznu5.jpg" alt="">
             </a>
           </li>
         </ul>
@@ -156,77 +156,77 @@
             <li>
               <a href="/all-products/skincare/xit-khoang">
                 Xịt khoáng
-                <img src="https://res-console.cloudinary.com/bunny-store/thumbnails/v1/image/upload/v1710647064/cHJvZHVjdHMvYmozc2ZhZTRkeGllb2psY2s4aWk=/preview" alt="">
+                <img src="https://res.cloudinary.com/bunny-store/image/upload/v1711079975/web-img/mhseyytpn8h6zvg4tabd_r57wfv.jpg" alt="">
               </a>
             </li>
 
             <li>
               <a href="/all-products/skincare/mat-na">
                 Mặt nạ
-                <img src="https://res-console.cloudinary.com/bunny-store/thumbnails/v1/image/upload/v1710648052/cHJvZHVjdHMveWNtMG9ucXM2MjRsaHMyaDczZDM=/preview" alt="">
+                <img src="https://res.cloudinary.com/bunny-store/image/upload/v1711079978/web-img/sfudjh00pykqpvav4sgy_xqbzev.jpg" alt="">
               </a>
             </li>
 
             <li>
               <a href="/all-products/skincare/serum">
                 Serum
-                <img src="https://res-console.cloudinary.com/bunny-store/thumbnails/v1/image/upload/v1710648014/cHJvZHVjdHMvc2ZzY3p6emFjc3JudjBveHB3NHQ=/preview" alt="">
+                <img src="https://res.cloudinary.com/bunny-store/image/upload/v1711079970/web-img/kjz3zdlyxo76h1p3t6lm_uk4agl.jpg" alt="">
             </a>
             </li>
 
             <li>
               <a href="/all-products/skincare/bha">
                 BHA
-                <img src="https://res-console.cloudinary.com/bunny-store/thumbnails/v1/image/upload/v1710647156/cHJvZHVjdHMvaXRwZncycnZiZ2x3amxsZm1md2Q=/preview" alt="">
+                <img src="https://res.cloudinary.com/bunny-store/image/upload/v1711079984/web-img/tw8lej0aklemwinukmbq_n00mji.jpg" alt="">
             </a>
             </li>
 
             <li>
               <a href="/all-products/skincare/tay-da-chet">
                 Tẩy da chết
-                <img src="https://res-console.cloudinary.com/bunny-store/thumbnails/v1/image/upload/v1710647212/cHJvZHVjdHMvYXFqcjlhZDlrMWdzb2x0dWNzM3I=/preview" alt="">
+                <img src="https://res.cloudinary.com/bunny-store/image/upload/v1711079964/web-img/ettmlmf7s4x0g8d98nvq_vklnps.jpg" alt="">
               </a>
             </li>
 
             <li>
               <a href="/all-products/skincare/duong-da">
                 Dưỡng da
-                <img src="https://res-console.cloudinary.com/bunny-store/thumbnails/v1/image/upload/v1710647079/cHJvZHVjdHMvYnNiaHFoMm1jdWE4b2trZndwY3E=/preview" alt="">
+                <img src="https://res.cloudinary.com/bunny-store/image/upload/v1711079987/web-img/xkkpidyegeiesbea9rk5_b4tgej.jpg" alt="">
               </a>
             </li>
 
             <li>
               <a href="/all-products/skincare/toner">
                 Toner
-                <img src="https://res-console.cloudinary.com/bunny-store/thumbnails/v1/image/upload/v1710647707/cHJvZHVjdHMvajNnbWtrbmxodGp1cnU4aWc1aW0=/preview" alt="">
+                <img src="https://res.cloudinary.com/bunny-store/image/upload/v1711079967/web-img/k0easo5upkoydszse1i3_jp7mrg.jpg" alt="">
               </a>
             </li>
 
             <li>
               <a href="/all-products/skincare/nuoc-tay-trang">
                 Nước tẩy trang
-                <img src="https://res-console.cloudinary.com/bunny-store/thumbnails/v1/image/upload/v1710647750/cHJvZHVjdHMvZDg1amlmanBnZGdhMTVrenBha2E=/preview" alt="">
+                <img src="https://res.cloudinary.com/bunny-store/image/upload/v1711079972/web-img/md2husxtaoo5kmyp6qxy_cmvvnp.jpg" alt="">
               </a>
             </li>
 
             <li>
               <a href="/all-products/skincare/cham-mun">
                 Chấm mụn
-                <img src="https://res-console.cloudinary.com/bunny-store/thumbnails/v1/image/upload/v1710647968/cHJvZHVjdHMvYWFyMmpxc2x3ZTlza2RidG1yb3Y=/preview" alt="">
+                <img src="https://res.cloudinary.com/bunny-store/image/upload/v1711079961/web-img/almfjrziupsfnxh4ikej_hfcib1.jpg" alt="">
               </a>
             </li>
             
             <li>
               <a href="/all-products/skincare/kem-duong-am">
                 Kem dưỡng ẩm
-                <img src="https://res-console.cloudinary.com/bunny-store/thumbnails/v1/image/upload/v1710648227/cHJvZHVjdHMvdGl2azJ0ZTNlY2hpcmhlbXljdXA=/preview" alt="">
+                <img src="https://res.cloudinary.com/bunny-store/image/upload/v1711079981/web-img/sznuvy878jkx6irn87wt_molje8.jpg" alt="">
               </a>
             </li>
 
             <li>
               <a href="/all-products/skincare/sua-rua-mat">
                 Sữa rửa mặt
-                <img src="https://res-console.cloudinary.com/bunny-store/thumbnails/v1/image/upload/v1710648203/cHJvZHVjdHMvenk4YXBsaGd1emxzdWNtbGZ3Z3Q=/preview" alt="">
+                <img src="https://res.cloudinary.com/bunny-store/image/upload/v1711079959/web-img/zeuznbkrsspuucipy2bh_akixfj.jpg" alt="">
               </a>
             </li>
         </ul>
