--- a/src/resource/views/layouts/admin.hbs
+++ b/src/resource/views/layouts/admin.hbs
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="icon" type="image/svg+xml" href="../../img/4.jpg" />
+  <link rel="icon" type="image/svg+xml" href="https://res.cloudinary.com/bunny-store/image/upload/v1711070715/web-img/4_lnwzuk.jpg" />
   <link rel="stylesheet" href="/css/adminAllOrders.css">
   <link rel="stylesheet" href="/css/adminAllProducts.css">
   <link rel="stylesheet" href="/css/adminCreateProduct.css">
