--- a/src/resource/views/users/allOrders.hbs
+++ b/src/resource/views/users/allOrders.hbs
@@ -256,7 +256,7 @@ displayProcess()
 function updateTableFooter(totalOrderPrice) {
   var getTableFooter = document.querySelector('tfoot')
   var totalOrderTitle = document.createElement('td')
-  totalOrderTitle.innerText = 'Tổng Đơn Hàng'
+  totalOrderTitle.innerText = 'Tổng'
 
   var totalOrderPrices = document.createElement('td')
 
