--- a/src/resource/views/users/ordersChecking.hbs
+++ b/src/resource/views/users/ordersChecking.hbs
@@ -44,7 +44,7 @@
             <table>
                 <thead>
                     <tr>
-                        <td style="width: 20%">Ngày Đặt Hàng</td>
+                        <td style="width: 20%">Ngày Đặt</td>
                         <td style="width: 20%">Người Đặt</td>
                         <td style="width: 50%">Tiến Độ</td>
                         <td style="width: 10%"></td>
