--- a/src/resource/views/users/updateProfile.hbs
+++ b/src/resource/views/users/updateProfile.hbs
@@ -40,7 +40,7 @@
         Thông Tin Cá Nhân
       </p>
 
-      <form class="update-profile" method="POST" action="/profile/updated/{{user._id}}?_method=PUT">
+      <form class="update-profile" method="POST" action="/profile/updated/{{userInfo._id}}?_method=PUT">
         <div class="form-group">
           <label for="name">Tên Khách Hàng</label>
           <input 
