--- a/src/public/css/userOrder.css
+++ b/src/public/css/userOrder.css
@@ -28,6 +28,8 @@
       height: 50px;
       font-weight: bolder;
       text-align: center;
+      width: fit-content;
+
     }
 
     tbody {
@@ -35,6 +37,11 @@
         height: 50px;
         border-bottom: 1px solid black;
         padding: 5px 0;
+
+        p {
+          /* margin-block-start: 1em; */
+          margin-block-end: 1em;
+        }
       }
     }
   }
@@ -42,6 +49,15 @@
 
 @media screen and (max-width: 700px) {
   table {
+    tbody {
+      td:nth-child(1) {
+        overflow: hidden;
+        display: -webkit-box;
+        -webkit-line-clamp: 2; 
+        -webkit-box-orient: vertical;
+      }
+    }
+
     width: 100% !important;
   }
 }
