--- a/src/resource/views/partials/userHeader.hbs
+++ b/src/resource/views/partials/userHeader.hbs
@@ -1,5 +1,5 @@
 <div class="store-logo">
-  <a href="/home">
+  <a href="/">
     <image src="https://res.cloudinary.com/bunny-store/image/upload/v1711070727/web-img/logo_xkavlj.webp"/>
   </a>
 
