--- a/src/resource/views/partials/userHeader.hbs
+++ b/src/resource/views/partials/userHeader.hbs
@@ -266,7 +266,7 @@
 
     var logOutButton = document.createElement('a')
     logOutButton.innerText = 'Đăng Xuất'
-    logOutButton.setAttribute('href', '/home')
+    logOutButton.setAttribute('href', '/')
     getAvatarMenu.appendChild(logOutButton)
   } 
   else {
