--- a/src/resource/views/users/updateProfile.hbs
+++ b/src/resource/views/users/updateProfile.hbs
@@ -195,13 +195,13 @@
       <table style="width:100%">
         <tr>
           <th>
-            Tên Người Nhận
+            Người Nhận
           </th>
           <th>
-            Tổng Số Tiền
+            Tổng Tiền
           </th>
           <th>
-            Ngày Đặt Hàng
+            Ngày
           </th>
           <th>
             Tình Trạng
@@ -215,7 +215,7 @@
             {{this.customerInfo.name}}
           </td>
           <td>
-            {{this.totalOrderPrice}} đ
+            {{this.totalOrderPrice}}đ
           </td>
           <td>
             {{this.createdAt}}
