--- a/src/public/css/userHome.css
+++ b/src/public/css/userHome.css
@@ -1,5 +1,4 @@
-.flash-deal-board, .hot-products-board, .content-board, .famous-brand-board {
-  width: 100%;
+.flash-deal-board, .hot-products-board, .content-board {
   overflow: hidden;
   padding-top: 20px;
 
@@ -37,65 +36,112 @@
       transform-origin: bottom left;
     }
   }
-}
 
-.products {
-  -ms-overflow-style: none;  /* IE and Edge */
-  scrollbar-width: none;  /* Firefox */
-  overflow-x: scroll;
-  box-sizing: content-box;
-  scroll-behavior: smooth;
-  align-items: center;
-  gap: 10px;
-  height: auto;
-  padding: 15px;
-  display: grid;
-  grid-template-columns: repeat(5, minmax(min(11.25rem, 100%), 1fr));
-  scroll-snap-type: x mandatory;
+  .products {
+    -ms-overflow-style: none;  /* IE and Edge */
+    scrollbar-width: none;  /* Firefox */
+    overflow-x: scroll;
+    box-sizing: content-box;
+    scroll-behavior: smooth;
+    align-items: center;
+    gap: 10px;
+    height: auto;
+    padding: 15px;
+    display: grid;
+    grid-template-columns: repeat(5, minmax(min(11.25rem, 100%), 1fr));
+    scroll-snap-type: x mandatory;
+    
+    img { max-width: 100%; aspect-ratio: 1 / 1 };
   
-  img { max-width: 100%; aspect-ratio: 1 / 1 };
+    a, p { text-decoration: none; color: black};
 
-  a, p { text-decoration: none; color: black};
+    a {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
+    
+    .product {
+      background-color: white; 
+      max-width: 220px;
+      padding: 5px 12px;
+      scroll-snap-align: none start;
+      border-radius: 10px;
+    };
+    
+    .product:hover {
+      border: 1.5px solid red;
+      border-radius: 10px;
+      box-shadow: 1rem black;
+      scale: 1.05;
+      box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    }
+  }
   
-  .product {
-    background-color: white; 
-    max-width: 220px;
-    padding: 5px 12px;
-    scroll-snap-align: none start;
-    border-radius: 10px;
-  };
+  #product-price {
+    background-color: #FFDFDF;
+    padding: 5px;
+    width: fit-content;
+    border-radius: 5px;
+    font-weight: bolder;
+  }
   
-  .product:hover {
-    border: 1.5px solid red;
-    border-radius: 10px;
-    box-shadow: 1rem black;
-    scale: 1.05;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  #product-details {
+    display: flex; 
+    height: 50px; 
+    text-overflow: ellipsis; 
+    overflow: hidden;
+    word-wrap: break-word;
+    font-size: 14px;
+  }
+  
+  .products::-webkit-scrollbar {
+    display: none;
   }
 }
 
-#product-price {
-  background-color: #FFDFDF;
-  padding: 5px;
-  width: fit-content;
-  border-radius: 5px;
-  font-weight: bolder;
-}
-
-#product-details {
-  display: flex; 
-  height: 50px; 
-  text-overflow: ellipsis; 
-  overflow: hidden;
-  word-wrap: break-word;
-  font-size: 14px;
-}
-
-.products::-webkit-scrollbar {
-  display: none;
-}
-
 .famous-brand-board {
+  overflow: hidden;
+  padding-top: 20px;
+  position: relative;
+  margin: auto;
+  justify-content: center;
+
+  .title {
+    display: flex; 
+    align-items: center; 
+    justify-content: center;
+    gap: 5px; 
+    font-size: 32px;
+
+    i { color: red;}
+  
+    .main-title {
+      display: inline-block;
+      position: relative;
+      color: red;
+      text-decoration: none;
+    }
+    
+    .main-title::after {
+      content: '';
+      position: absolute;
+      width: 100%;
+      transform: scaleX(0);
+      height: 2px;
+      bottom: 0;
+      left: 0;
+      background-color: red;
+      transform-origin: bottom right;
+      transition: transform 0.25s ease-out;
+    }
+    
+    .main-title:hover::after {
+      transform: scaleX(1);
+      transform-origin: bottom left;
+    }
+  }
+
   .brands {
     width: 100%;
     position: relative;
